matgo/Assets/Plugins/Android/src/binkplugin.h

// turn the plug in system on and off (these functions touch the graphics API)
PLUG_IN_FUNC_DEC( S32 ) BinkPluginInit( void * device, U32 graphics_api );
 
PLUG_IN_FUNC_DEC( void ) BinkPluginShutdown( void );
                     

// spins through all binks, advancing frames and using gpu 
//   this function will hit the gpu on D3D9 and GPUAssisted (not plain GL and D3D11)
//   try to take less than ms_to_process (gotos will take longer, depending on goto time)
PLUG_IN_FUNC_DEC( void ) BinkPluginProcessBinks( S32 ms_to_process );
 

// spins through all binks, drawing everything, you can tell it what you want to draw
//   if you want to draw the rendertargets at a different moment within the frame
PLUG_IN_FUNC_DEC( void ) BinkPluginDraw( S32 draw_overlays, S32 draw_to_render_textures );
 

// turn on and off IO for all Binks - if the buffer runs *completely* out, we still hit the disc
PLUG_IN_FUNC_DEC( void ) BinkPluginIOPause( S32 IO_on );
// Tell Bink to try to use GPU-assisted mode (once on, always on)
PLUG_IN_FUNC_DEC( void ) BinkPluginTurnOnGPUAssist( void );
// used to specify the sounds to open at playback
enum BINKPLUGINSNDTRACK
{
  BinkSndNone               = 0, // don't open any sound tracks snd_track_start not used
  BinkSndSimple             = 1, // based on filename, OR simply mono or stereo sound in track snd_track_start (default speaker spread)
  BinkSndLanguageOverride   = 2, // mono or stereo sound in track 0, language track at snd_track_start
  BinkSnd51                 = 3, // 6 mono tracks in tracks snd_track_start[0..5]
  BinkSnd51LanguageOverride = 4, // 6 mono tracks in tracks 0..5, center language track at snd_track_start
  BinkSnd71                 = 5, // 8 mono tracks in tracks snd_track_start[0..7]
  BinkSnd71LanguageOverride = 6, // 8 mono tracks in tracks 0..7, center language track at snd_track_start
};
typedef struct BINKPLUGIN BINKPLUGIN;
// open and close a Bink file
PLUG_IN_FUNC_DEC( BINKPLUGIN * ) BinkPluginOpen( char const * name, U32 snd_track_type, S32 snd_track_start, U32 buffering_type, U64 file_byte_offset );
PLUG_IN_FUNC_DEC( void ) BinkPluginClose( BINKPLUGIN * bnk );
// error stuff
PLUG_IN_FUNC_DEC( char const * ) BinkPluginError( void );
typedef struct BINKPLUGININFO
{
  U64 BufferSize;
  U64 BufferUsed;
  U32 Width;
  U32 Height;
  U32 Frames;
  U32 FrameNum;
  U32 TotalFrames;
  U32 FrameRate;
  U32 FrameRateDiv;
  U32 LoopsRemaining;
  S32 ReadError;
  S32 TexturesError;
  U32 SndTrackType;          // BINKPLUGINSNDTRACK in use
  U32 NumTracksRequested;    // Num tracks
  U32 NumTracksOpened;
  U32 SoundDropOuts;
  U32 SkippedFrames;
  U32 PlaybackState;         // 0 = playing, 1 = paused, 2 = gotoing, 3 = at end
  F32 ProcessBinksFrameRate; // rate at which ProcessBinks is getting called (over last 32 processes)
  F32 Alpha;
} BINKPLUGININFO;
// get playback info
PLUG_IN_FUNC_DEC( void ) BinkPluginInfo( BINKPLUGIN * bnk, BINKPLUGININFO * info );
// call one of these functions every frame
PLUG_IN_FUNC_DEC( S32 ) BinkPluginScheduleToTexture( BINKPLUGIN * bnk, F32 x0, F32 y0, F32 x1, F32 y1, S32 depth, void * render_target_texture, U32 render_target_width, U32 render_target_height );
PLUG_IN_FUNC_DEC( S32 ) BinkPluginScheduleOverlay( BINKPLUGIN * bnk, F32 x0, F32 y0, F32 x1, F32 y1, S32 depth );
// call when everything is scheduled
PLUG_IN_FUNC_DEC( void ) BinkPluginAllScheduled( void );
// Pause playback
PLUG_IN_FUNC_DEC( void ) BinkPluginPause( BINKPLUGIN * bnk, S32 pause_frame ); // 0 = resume, or framenumber to pause on, or -1 to pause immediately
// start async jumping to frame (may draw same frame for long time until it finishes - can monitor with GetInfo)
//   goto_frame is dest frame (fast if key frame). Use 0 to cancel a previous goto at the current position
//   ms_per_process is how long Bink can spend decompressing in BinkPluginProcessBinks for this goto, use -1 for infinite wait
PLUG_IN_FUNC_DEC( void ) BinkPluginGoto( BINKPLUGIN * bnk, S32 goto_frame, S32 ms_per_process );
 

// set overall volume
PLUG_IN_FUNC_DEC( void ) BinkPluginVolume( BINKPLUGIN * bnk, F32 vol ); // 0 to 1.0
// set speaker volume
//   BinkSndSimple = count must be 2 (l/r)
//   BinkSndLanguageOverride = count must be 3 (l,r)/language
//   BinkSnd51 = count must be 6 (front l/r),center,sub,(rear l/r),
//   BinkSnd51LanguageOverride = 7 (front l/r),center,sub,(rear l/r),language
//   BinkSnd71 = count must be 8 (front l/r),center,sub,(read l/r),(surr l/r)
//   BinkSnd71LanguageOverride = 9 (front l/r),center,sub,(read l/r),(surr l/r), lang
PLUG_IN_FUNC_DEC( void ) BinkPluginSpeakerVolumes( BINKPLUGIN * bnk, F32 * vols, U32 count ); // 0 to 1.0 
// turn on/off video looping, loops == 0, infinite
PLUG_IN_FUNC_DEC( void ) BinkPluginLoop( BINKPLUGIN * bnk, U32 loops );
// for windows only, use directsound (otherwise uses Xaudio2) call before first open
PLUG_IN_FUNC_DEC( void ) BinkPluginWindowsUseDirectSound( void );
// for D3D9 windows only (call before and after device reset to reset GPU video textures)
PLUG_IN_FUNC_DEC( void ) BinkPluginWindowsD3D9BeginReset( void );
PLUG_IN_FUNC_DEC( void ) BinkPluginWindowsD3D9EndReset( void );